[package]
name = "pdf_edit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lopdf = "0.27.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "Window", "Document", "HtmlElement", "Element",
  "Blob", "HtmlInputElement", "FileList", "File", "HtmlTextAreaElement",
]
